--- a/package.json
+++ b/package.json
@@ -44,21 +44,22 @@
     "@types/node": "^20.14.9",
     "@types/supertest": "^6.0.2",
     "@types/swagger-ui-express": "^4.1.8",
-    "@typescript-eslint/eslint-plugin": "^7.13.0",
-    "@typescript-eslint/parser": "^7.13.0",
+    "@typescript-eslint/eslint-plugin": "^8.0.0",
+    "@typescript-eslint/parser": "^8.0.0",
     "@vercel/node": "^5.5.3",
     "c8": "^8.0.1",
-    "eslint": "^8.57.0",
+    "eslint": "^9.39.0",
     "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-import": "^2.29.1",
+    "eslint-plugin-import": "^2.31.0",
     "prettier": "^3.2.5",
     "supertest": "^7.0.0",
     "ts-node-dev": "^2.0.0",
     "tsx": "^4.20.6",
     "typescript": "^5.5.2",
-    "vitest": "^1.6.0"
+    "typescript-eslint": "^8.46.2",
+    "vitest": "^4.0.6"
   },
   "engines": {
-    "node": ">=20.0.0"
+    "node": ">=20.0.0 <21.0.0"
   }
 }
