--- a/package.json
+++ b/package.json
@@ -30,16 +30,20 @@
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "express-rate-limit": "^7.1.5",
-    "helmet": "^7.1.0",
+    "fast-json-stable-stringify": "^2.1.0",
+    "helmet": "^7.2.0",
+    "lru-cache": "^11.2.2",
     "pino": "^9.3.2",
+    "rate-limiter-flexible": "^8.1.0",
     "swagger-ui-express": "^5.0.1",
-    "undici": "^6.19.2",
+    "undici": "^6.22.0",
     "yaml": "^2.4.2",
     "zod": "^3.23.8"
   },
   "devDependencies": {
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
+    "@types/lru-cache": "^7.10.9",
     "@types/node": "^20.14.9",
     "@types/supertest": "^6.0.2",
     "@types/swagger-ui-express": "^4.1.8",
