--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "test": "vitest run",
     "test:watch": "vitest",
     "coverage": "vitest run --coverage",
-    "typecheck": "tsc --noEmit"
+    "typecheck": "tsc --noEmit",
+    "generate:openapi": "tsx scripts/openapi.ts",
+    "generate:sdk": "tsx scripts/sdk.ts"
   },
   "keywords": [
     "usda",
@@ -25,22 +27,37 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
+    "@opentelemetry/api": "^1.9.0",
+    "@opentelemetry/auto-instrumentations-node": "^0.66.0",
+    "@opentelemetry/instrumentation": "^0.207.0",
+    "@opentelemetry/instrumentation-express": "^0.56.0",
+    "@opentelemetry/instrumentation-http": "^0.207.0",
+    "@opentelemetry/resources": "^2.2.0",
+    "@opentelemetry/sdk-metrics": "^2.2.0",
+    "@opentelemetry/sdk-node": "^0.207.0",
+    "@opentelemetry/semantic-conventions": "^1.37.0",
     "axios": "^1.7.2",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "express-rate-limit": "^7.1.5",
+    "fast-check": "^4.3.0",
     "fast-json-stable-stringify": "^2.1.0",
     "helmet": "^7.2.0",
     "lru-cache": "^11.2.2",
+    "msw": "^2.11.6",
+    "nock": "^14.0.10",
     "pino": "^9.3.2",
+    "prom-client": "^15.1.3",
     "rate-limiter-flexible": "^8.1.0",
     "swagger-ui-express": "^5.0.1",
     "undici": "^6.22.0",
     "yaml": "^2.4.2",
-    "zod": "^3.23.8"
+    "zod": "^3.23.8",
+    "zod-to-openapi": "^0.2.1"
   },
   "devDependencies": {
+    "@stoplight/prism-cli": "^5.14.2",
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
     "@types/lru-cache": "^7.10.9",
@@ -54,6 +71,7 @@
     "eslint": "^9.39.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-import": "^2.31.0",
+    "openapi-typescript-codegen": "^0.29.0",
     "pino-pretty": "^11.2.2",
     "prettier": "^3.2.5",
     "supertest": "^7.0.0",
