--- a/package.json
+++ b/package.json
@@ -53,8 +53,7 @@
     "swagger-ui-express": "^5.0.1",
     "undici": "^6.22.0",
     "yaml": "^2.4.2",
-    "zod": "^3.23.8",
-    "zod-to-openapi": "^0.2.1"
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@stoplight/prism-cli": "^5.14.2",
