--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@opentelemetry/sdk-node": "^0.207.0",
     "@opentelemetry/semantic-conventions": "^1.37.0",
     "axios": "^1.7.2",
+    "compromise": "^14.14.1",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
@@ -44,14 +45,17 @@
     "fast-check": "^4.3.0",
     "fast-json-stable-stringify": "^2.1.0",
     "helmet": "^7.2.0",
+    "joi": "^17.13.3",
     "lru-cache": "^11.2.2",
     "msw": "^2.11.6",
     "nock": "^14.0.10",
     "pino": "^9.3.2",
     "prom-client": "^15.1.3",
     "rate-limiter-flexible": "^8.1.0",
+    "string-similarity": "^4.0.4",
     "swagger-ui-express": "^5.0.1",
     "undici": "^6.22.0",
+    "winston": "^3.15.0",
     "yaml": "^2.4.2",
     "zod": "^3.23.8"
   },
@@ -61,6 +65,7 @@
     "@types/express": "^4.17.21",
     "@types/lru-cache": "^7.10.9",
     "@types/node": "^20.14.9",
+    "@types/string-similarity": "^4.0.2",
     "@types/supertest": "^6.0.2",
     "@types/swagger-ui-express": "^4.1.8",
     "@typescript-eslint/eslint-plugin": "^8.0.0",
